--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "bower": "^1.8.4",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "jasmine": "^3.1.0",
     "rxjs": "5.5.7",
     "sw-toolbox": "3.6.0",
+    "typings": "^2.1.1",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
